# viennamesh-dev

./: CMakeLists.txt
examples/data/: two_cubes_0.vtu  two_cubes_1.vtu
examples/pipelines/: bla.pvd  bla_0.vtu  bla_1.vtu  boundary.vtu  cgal_mesh_simplification.xml  clipped_bla.pvd  clipped_bla_0.vtu  clipped_bla_1.vtu  convert_poly_to_vtu.xml  cross_delaunay.vtu  cube.vtu  mesh.vtu  metis.xml  my_simple_mesh.vtu  output.pvd  output.vtu  output_0.vtu  output_1.vtu  pragmatic_refine_mesh_decompressed.vtu  remeshed_hull.vtu  remeshed_volume.vtu  simplexified.vtu  statistics.xml  symmetry_3d.xml  triangle2d.xml  two_cubes.pvd  two_cubes_0.vtu  two_cubes_1.vtu  two_cubes_hull.vtu
examples/tutorials/: CMakeLists.txt  lg_convert_poly_to_vtu.cpp  lg_mesh.cpp  lg_mesh_partitioner.cpp  lg_viemesh_pragmatic.cpp  myfirsttask.cpp  pragmatic_refiner.cpp  pragmatic_smoother.cpp  pragmatic_swapper.cpp  tetgen_mesher.cpp  tetgen_refiner.cpp  triangle_hull_mesher.cpp  triangle_mesher.cpp  triangle_refiner.cpp
include/pragmatic/: VTKTools.h
plugins/: CMakeLists.txt
plugins/io/: mesh_reader.cpp
plugins/pragmatic/: CMakeLists.txt  plugin.cpp  pragmatic_coarsen.cpp  pragmatic_mesh.hpp  pragmatic_refine.cpp  pragmatic_refine_multi.cpp  pragmatic_refine_multi.hpp  pragmatic_smooth.cpp  pragmatic_swapping.cpp
plugins/pragmatic/headers/: Refine.h
plugins/statistics/: element_metrics.hpp  make_statistic.cpp
plugins/statistics/metrics/: min_angle.hpp
plugins/tetgen/: tetgen_make_mesh.cpp
plugins/triangle/: triangle_make_mesh.cpp
plugins/viennagrid/: extract_boundary.cpp
